# Tanks

./: CMakeLists.txt
include/: aiutils.hpp  application.hpp  boostgeometryinterop.hpp  callbacktimer.hpp  clientgamestate.hpp  context.hpp  events.hpp  gamestate.hpp  lambdavisitor.hpp  networkpacket.hpp  noncopyable.hpp  player.hpp  resources.hpp  servergamestate.hpp  sfserialization.hpp  state.hpp  statefactory.hpp  stateid.hpp  statemachine.hpp  utils.hpp
include/components/: ai.hpp  animation.hpp  bullet.hpp  childentities.hpp  dependencies.hpp  drawable.hpp  health.hpp  hitbox.hpp  lifetime.hpp  pawn.hpp  powerup.hpp  projectile.hpp  tank.hpp  transform.hpp  turret.hpp
include/drawables/: lifebar.hpp
include/systems/: aicontrollersystem.hpp  animationsystem.hpp  collisionsystem.hpp  gameplaysystem.hpp  healthsystem.hpp  inputsystem.hpp  inputtranslationsystem.hpp  lifebarsystem.hpp  lifetimesystem.hpp  messagerenderingsystem.hpp  networkeventtranslator.hpp  networkinputhandler.hpp  networkmessagereceiversystem.hpp  networkmessagesendersystem.hpp  pawndeletersystem.hpp  pawnmovementsystem.hpp  pawnnamesystem.hpp  powerupsystem.hpp  projectilecollisionhandler.hpp  projectilesystem.hpp  renderingsystem.hpp  scorepanelsystem.hpp  shieldsystem.hpp  soundsystem.hpp  tankcollisionhandler.hpp  tanktrailsystem.hpp  tripleshootsystem.hpp  turrethandlersystem.hpp
src/: application.cpp  callbacktimer.cpp  clientgamestate.cpp  gamestate.cpp  main.cpp  servergamestate.cpp  statemachine.cpp
src/components/: ai.cpp
src/drawables/: lifebar.cpp
(+28 files in other folders)
